Archive2/32/db70bbd1ee9d83/main.cpp
#include <functional>

int main()
{
    std::function<void ()> f = [&]() { f(); };
}
